@@ -1,3 +1,4 @@
+* Use global cache for Function fields in readonly transactions
 * Add option to strip leading and trailing whitespace from fields.Char
 
 Version 6.0.2 - 2021-05-15
